added refactored code and updated swagger
