# swagger.yml
@@ -148,6 +148,7 @@ paths:
           schema:
             $ref: "#/definitions/ListOfMeetingInfo"
 
+
   /api/users:
 
     post:
@@ -357,6 +358,30 @@ paths:
       responses:
         200:
           description: OK
+          schema:
+            $ref: "#/definitions/ActionResponse"
+
+
+  /api/meetingSuggestion:
+
+    post:
+      summary: Suggest Meeting Times Given List of Participants
+      parameters:
+        - name: meeting suggestion object
+          in: body
+          description: meeting suggestion object
+          required: true
+          schema:
+            $ref: "#/definitions/MeetingSuggestionObject"
+      tags:
+        - Users
+      responses:
+        201:
+          description: Created
+          headers:
+            Location:
+              description: relative URL to created user record
+              type: string
           schema:
             $ref: "#/definitions/ActionResponse"
 
@@ -594,5 +619,25 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/MeetingInfo"
+    required:
+      - meetings
+
+  MeetingSuggestionObject:
+    type: object
+    properties:
+      meetings:
+        type: array
+        items:
+          $ref: "#/definitions/MeetingInfo"
+      startTime:
+        type: number
+        description: workday starting hour (0-23). default 7AM = 7
+      endTime:
+        type: number
+        description: workday end hour (0-23). default 5PM = 17
+      numDaysAhead:
+        type: number
+        description: number of days ahead to search. default 3
+          $ref:
     required:
       - meetings
